<resources>
    <string name="app_name">PlaytomicTony&amp;Aymane</string>
    <string name="title_play">Play</string>
    <string name="title_discovery">Discovery</string>
    <string name="title_home">Home</string>
    <string name="title_user">Profile</string>
    <string name="office">Play</string>
    <string name="x2_devices">wxw</string>

    <string name="auth_request_email">Enter your email address:</string>
    <string name="auth_request_password_title">Title</string>
    <string name="auth_request_password">Text</string>
    <string name="auth_continue">Continue</string>
    <string name="sign_out">Sign out</string>
    <string name="book_button_text">Book a court</string>
    <string name="start_match">Play a match</string>
    <string name="hint_text">Search a court</string>
    <string name="button_text">Search</string>
    <string name="urlSearch">https://nominatim.openstreetmap.org/search?q=</string>

</resources>