<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_play"
    >

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.playtomictonyaymane.ui.userprofile.UserProfileFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_discovery2"
            app:destination="@id/navigation_discovery" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_user"
            app:destination="@id/navigation_user" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_play"
            app:destination="@id/navigation_play" />
    </fragment>

    <fragment
        android:id="@+id/navigation_discovery"
        android:name="com.example.playtomictonyaymane.ui.searchcourt_discovery.SearchCourtFragment"
        android:label="@string/title_discovery"
        tools:layout="@layout/fragment_discovery" />

    <fragment
        android:id="@+id/navigation_user"
        android:name="com.example.playtomictonyaymane.ui.userprofile.UserProfileFragment"
        android:label="@string/title_user"
        tools:layout="@layout/fragment_user" >
        <action
            android:id="@+id/action_navigation_user_to_editProfileFragment"
            app:destination="@id/editProfileFragment"
            app:popUpToInclusive="true"
            app:popUpToSaveState="true"
            app:popUpTo="@+id/navigation_user"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_play"
        android:name="com.example.playtomictonyaymane.ui.play.PlayFragment"
        android:label="@string/title_play"
        tools:layout="@layout/fragment_play" >
        <action
            android:id="@+id/action_navigation_play_to_bookingCourtFragment"
            app:destination="@id/bookingCourtFragment" />
        <action
            android:id="@+id/action_navigation_play_to_openMatchesFragment"
            app:destination="@id/openMatchesFragment" />
    </fragment>
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.example.playtomictonyaymane.ui.editProfile.EditProfileFragment"
        android:label="fragment_editprofile"
        tools:layout="@layout/fragment_editprofile">
        <action
            android:id="@+id/action_navigation_editProfile_to_navigation_user"
            app:destination="@id/navigation_user" />
    </fragment>
    <fragment
        android:id="@+id/bookingCourtFragment"
        android:name="com.example.playtomictonyaymane.ui.court.BookingCourtFragment"
        android:label="BookingCourtFragment" />
    <fragment
        android:id="@+id/openMatchesFragment"
        android:name="com.example.playtomictonyaymane.ui.OpenMatch.OpenMatchesFragment"
        android:label="OpenMatchesFragment" >
        <action
            android:id="@+id/action_openMatchesFragment_to_addMatchesFragment"
            app:destination="@id/addMatchesFragment" />
    </fragment>
    <fragment
        android:id="@+id/addMatchesFragment"
        android:name="com.example.playtomictonyaymane.ui.OpenMatch.AddMatchesFragment"
        android:label="AddMatchesFragment" />


</navigation>